--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,7 +1,9 @@
 ---
-import Mainlayout from "../layouts/main.astro"
+import Sub from "../layouts/sub.astro";
 const title = "Home Alarm & CCTV Installers";
 const description = "Meta description for page.";
 ---
-<Mainlayout description={description} title={title}>	
+<Sub description={description} title={title}>	
     
+
+Sup
