--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -8,7 +8,7 @@ import Logo from "../assets/logo.png"
     <a class="block text-teal-600" href="#">
        <Image src={Logo}
           alt="logo"
-          class="h-20 w-full pt-6 object-fit transition duration-500 group-hover:scale-105 sm:h-20 sm:pt-8"/>
+          class="h-20 w-full pt-6 pl-2 object-fit transition duration-500 group-hover:scale-105 sm:h-20 sm:pt-8"/>
     </a>
 
     <div class="flex flex-1 items-center justify-end md:justify-between">
