--- a/src/components/ecomcard.astro
+++ b/src/components/ecomcard.astro
@@ -34,7 +34,7 @@ import West from "../assets/westcoastv2.png"
         </button>
       
         <Image src={Puhoi}
-          alt=""
+          alt="decal"
           class="h-100 w-full object-fill transition duration-500 group-hover:scale-105 sm:h-72"
         />
       
@@ -64,7 +64,7 @@ import West from "../assets/westcoastv2.png"
         </div>
       </a>
 
-      <a href="#" class="group relative block overflow-hidden">
+      <a href="https://buy.stripe.com/00gdRe5EnaChff2eUV" class="group relative block overflow-hidden">
         <button
           class="absolute end-4 top-4 z-10 rounded-full bg-white p-1.5 text-gray-900 transition hover:text-gray-900/75"
         >
